# npp

./: README.md  pyproject.toml
application/: gBF_util.py  gene_demo1.py  gene_demo2.py  gene_demo3.py  gene_demo4.py  misc_util.py  modeling_util.py  summarize_app.ipynb  transformer.py
application/figures/: readme
application/results/: readme
data/dominguez/: README.md
data/dominguez/processed/data/: pca.pkl  scaler.pkl
data/dominguez/processed/items/: genes.txt
data/reference/: README.md
data/vazquez/: README.md
data/vazquez/processed/items/: cells.txt  counts.npz  genes.txt
npp/: PolyaTree.py  PolyaTreeEmbedded.py  exact_demo.py  gB_demo.py  generalized_BFs.py  ksd.py  manager.py  mmd.py  test_PolyaTree.py  test_PolyaTreeEmbedded.py  test_gB_demo.py  test_ksd.py  test_mmd.py  test_wasserstein.py  wasserstein.py
npp/experiments/: demo_full_args_short.txt  gnpp_demo_full.sh  gnpp_demo_full_args.txt  gnpp_demo_full_short.sh  gnpp_demo_misspecified.sh  gnpp_demo_misspecified_ksd.sh  gnpp_demo_misspecified_mmd.sh  gnpp_demo_misspecified_wass.sh  gnpp_demo_rates_args.txt  gnpp_demo_specified.sh  gnpp_demo_specified_ksd.sh  gnpp_demo_specified_mmd.sh  gnpp_demo_specified_wass.sh  npp_demo_full.sh  npp_demo_full_args.txt  pt_demo_misspecified.sh  pt_demo_specified.sh
summarize/: summarize_demo.ipynb
