[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "npp"
version = "2024.0.0"
dependencies = [
    'numpy',
    'scipy',
    'matplotlib',
    'pytest',
    'randomname',
    'aim',
    'jupyterlab',
    'plotly',
    'pandas',
    'numpyro',
    'blackjax',
    'arviz',
    'pymc',
    'pymc_bart',
    'torch',
    'statsmodels',
    'scikit-learn'
]
requires-python = ">=3.10"
authors = [
    {name = "Eli N. Weinstein", email = "eli.n.weinstein@gmail.com"},
    {name = "Bohan Wu", email = "bw2766@columbia.edu"}
]
description = "Nonparametrically perturbed parametric models"
readme = "README.md"
license = {text = "MIT License"}